--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="phone">
                     <img src="./img/phone.png" alt="">
                     <div class="phoneScreen">
-                        <img src="" alt="" class="phoneApp">
+                        <img src="./img/mb_screen.png" alt="" class="phoneApp">
                     </div>
                 </div>
                 <div class="projectDetail">
@@ -58,9 +58,9 @@
             </div>
             <div class="project">
                 <div class="laptop">
-                    <img src="./img/laptop.png" alt="">
+                    <img class="laptop_img" src="./img/laptop.png" alt="">
                     <div class="laptopScreen">
-                        <img src="" alt="" class="laptopApp">
+                        <img src="./img/laptop_screen.png" alt="" class="laptopApp">
                     </div>
                 </div>
                 <div class="projectDetail">
@@ -81,7 +81,7 @@
                 <div class="phone">
                     <img src="./img/phone.png" alt="">
                     <div class="phoneScreen">
-                        <img src="" alt="" class="phoneApp">
+                        <img src="./img/mb_screen.png" alt="" class="phoneApp">
                     </div>
                 </div>
                 <div class="projectDetail">
@@ -102,27 +102,31 @@
         <!-- GITHUB -->
         <div class="githubContainer">
             <h1 class="githubTitle">Want to see all projects?</h1>
-            <div class="githubChart">
-                <div class="dates">
-                    <span>Jan</span>
-                    <span>Feb</span>
-                    <span>Mar</span>
-                    <span>Apr</span>
-                    <span>May</span>
-                    <span>Jun</span>
-                    <span>Jul</span>
-                    <span>Agu</span>
-                    <span>Sep</span>
-                    <span>Oct</span>
-                    <span>Nov</span>
-                    <span>Dec</span>
+            <a class="link_gh" href="https://github.com/Longanh0168">
+                <div class="githubChart">
+                    <div class="dates">
+                        <span>Jan</span>
+                        <span>Feb</span>
+                        <span>Mar</span>
+                        <span>Apr</span>
+                        <span>May</span>
+                        <span>Jun</span>
+                        <span>Jul</span>
+                        <span>Agu</span>
+                        <span>Sep</span>
+                        <span>Oct</span>
+                        <span>Nov</span>
+                        <span>Dec</span>
+                    </div>
+                    <div class="boxContainer"></div>
+                    <h1 class="githubTitle">ON GITHUB</h1>
                 </div>
-                <div class="boxContainer"></div>
-                <h1 class="githubTitle">ON GITHUB</h1>
-            </div>
+            </a>
+            
+            
             <div class="githubSm">
-                <a href="">
-                    <img src="./img/github.png" alt="">
+                <a href="https://github.com/Longanh0168">
+                    <img class="logo_gh" src="./img/GitHub.png" alt="">
                 </a>
                 <h2>Find Me on Github</h2>
             </div>
